"ChangeLog"

2006-05-10	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-03-CHP-02-01:
	  Make.global: cvsdiffs target now works in VPATH builds
		by switching to the $(srcdir) to run cvs diff, 
		still redirecting to the builddir's 'cvsdiffs'.  


2006-05-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-03:
	  Documented config/*.m4 autoconf macros, suitable for publication.  
		Documented in the style recommended by ac-archive.sf.net.  
	  Renamed many custom-defined AC_* macros to FANG_ or HACKT_
		to not infringe upon reserved autoconf namespaces.  
		configure.ac calls to macros updated accordingly.  
	  top_builddir generates a install_transform.sh
		to assist in transforming program names.


2006-05-06	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79:
	  Cleaned out the top-level TODO log.  
	  Minor source clean-ups.  


2006-05-05	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-24-merged-prsim-04-12:
	  Branch merge of -prsim-04-12.
	  Includes minor configure test fix in config/cxx.m4 (attribute).


2006-04-26	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-20-merged-icc-01-04:
	  Merged portability and configurisms from branch.  
		Vast improvement in icc support, but it still doesn't fully
		build yet.  Punting for later, when I have time to waste.


2006-04-25	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-19-icc-01-03:
	  configure check for std::_Identity, _Select1st, _Select2nd.  


2006-04-24	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-19-icc-01-02:
	  Tons of configurisms for SGI vs. Intel hash_map.
		Checking for namespace and template argument style.  
	  Forward declaration headers fixed accordingly.  


	* HACKT-00-01-04-main-00-78-19-icc-01-01:
	  Another crack at getting icc to compile hackt.  
	  configure.ac: moved AC_HEADER_STDCXX test earlier