@@ -1,0 +1,94 @@
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	24
+	3	##ADDR##	procdefn	0	#HEAD#	#TAIL#	125
+	4	##ADDR##	chancoll	0	#HEAD#	#TAIL#	47
+	5	##ADDR##	chaninst	0	#HEAD#	#TAIL#	24
+	6	##ADDR##	bchntprf	0	#HEAD#	#TAIL#	25
+	7	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	8	##ADDR##	datadefn	0	#HEAD#	#TAIL#	60
+	9	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	10	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	11	##ADDR##	chancoll	0	#HEAD#	#TAIL#	47
+	12	##ADDR##	chaninst	0	#HEAD#	#TAIL#	24
+	13	##ADDR##	bchntprf	0	#HEAD#	#TAIL#	25
+	14	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	15	##ADDR##	datadefn	0	#HEAD#	#TAIL#	61
+	16	##ADDR##	dboolcol	1	#HEAD#	#TAIL#	25
+	17	##ADDR##	datainst	0	#HEAD#	#TAIL#	24
+	18	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	19	##ADDR##	crnglst_	0	#HEAD#	#TAIL#	20
+	20	##ADDR##	dintcoll	0	#HEAD#	#TAIL#	34
+	21	##ADDR##	datainst	0	#HEAD#	#TAIL#	24
+	22	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	23	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	24	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	25	##ADDR##	pintcoll	0	#HEAD#	#TAIL#	33
+	26	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	27	##ADDR##	pintinst	0	#HEAD#	#TAIL#	16
+	28	##ADDR##	piassign	0	#HEAD#	#TAIL#	20
+	29	##ADDR##	spimvref	0	#HEAD#	#TAIL#	16
+	30	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	12
+	31	##ADDR##	CHPseqnc	0	#HEAD#	#TAIL#	20
+	32	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	20
+	33	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	34	##ADDR##	sdinref_	0	#HEAD#	#TAIL#	16
+	35	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	20
+	36	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	37	##ADDR##	nrelatex	0	#HEAD#	#TAIL#	22
+	38	##ADDR##	sdinref_	0	#HEAD#	#TAIL#	16
+	39	##ADDR##	spinref_	0	#HEAD#	#TAIL#	16
+	40	##ADDR##	CHPsend_	0	#HEAD#	#TAIL#	20
+	41	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	42	##ADDR##	sdbnref_	0	#HEAD#	#TAIL#	16
+	43	##ADDR##	nindlist	0	#HEAD#	#TAIL#	16
+	44	##ADDR##	spinref_	0	#HEAD#	#TAIL#	16
+	45	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+
+In module created from: ##FILE## (unrolled)
+In namespace "", we have: {
+  0 parameter-collections
+  0 instantiation-collections
+  0 sub-namespaces
+  1 definitions
+  0 typedefs
+  Definitions:
+    metalooptest = process-definition (defined) metalooptest(
+        chan?(int<4>) L
+        chan!(bool<>) R
+      )
+      In definition "metalooptest", we have: {
+      Parameters:
+        p = pint<> p (init = 13)
+      Instances:
+        L = chan?(int<4>) L
+        R = chan!(bool<>) R
+        b = bool<> b
+
+        l = int<4> l
+      unroll sequence: 
+        chan?(int<4>) L
+        chan!(bool<>) R
+        int<4> l
+        bool<> b[0..15]
+        pint<> p
+        p = 13;
+      chp:
+        concurrent: {
+          *[
+            sequential: {
+              L?(l)
+              deterministic: {
+                l==p -> R!(b[p])
+                else -> skip
+              }
+            }
+          ]
+        }
+      }
+
+}
+
