@@ -1,0 +1,62 @@
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	28
+	3	##ADDR##	proccoll	0	#HEAD#	#TAIL#	50
+	4	##ADDR##	procdefn	0	#HEAD#	#TAIL#	197
+	5	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
+	6	##ADDR##	datainst	0	#HEAD#	#TAIL#	24
+	7	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	8	##ADDR##	datadefn	0	#HEAD#	#TAIL#	61
+	9	##ADDR##	pboolcol	0	#HEAD#	#TAIL#	26
+	10	##ADDR##	pboolins	0	#HEAD#	#TAIL#	16
+	11	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	12
+	12	##ADDR##	CHPassgn	0	#HEAD#	#TAIL#	16
+	13	##ADDR##	sdbnref_	0	#HEAD#	#TAIL#	16
+	14	##ADDR##	spbnref_	0	#HEAD#	#TAIL#	16
+	15	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
+	16	##ADDR##	pboolcol	0	#HEAD#	#TAIL#	26
+	17	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	12
+	18	##ADDR##	procinst	0	#HEAD#	#TAIL#	24
+	19	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	20	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
+
+In module created from: ##FILE## (unrolled)
+In namespace "", we have: {
+  0 parameter-collections
+  1 instantiation-collections
+  0 sub-namespaces
+  1 definitions
+  0 typedefs
+  Definitions:
+    assignme = process-definition (defined) assignme(
+        bool<> b
+      )
+      In definition "assignme", we have: {
+      Parameters:
+        c = pbool<> c
+      Instances:
+        b = bool<> b
+      unroll sequence: 
+        bool<> b
+        pbool<> c
+      chp:
+        concurrent: {
+          *[
+            b := c
+          ]
+        }
+      footprint: {
+        bool^0 b (instantiated) = ::assignme::b 
+        pbool^0 c value: ?
+      }
+      }
+
+  Instances:
+    X = process assignme<>^0 X (instantiated) = ::X (
+      bool^0 b (instantiated) = ::X.b 
+    )
+}
+
