@@ -1,0 +1,77 @@
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	28
+	3	##ADDR##	proccoll	0	#HEAD#	#TAIL#	50
+	4	##ADDR##	procdefn	0	#HEAD#	#TAIL#	217
+	5	##ADDR##	pintcoll	0	#HEAD#	#TAIL#	33
+	6	##ADDR##	pintinst	0	#HEAD#	#TAIL#	16
+	7	##ADDR##	dintcoll	0	#HEAD#	#TAIL#	34
+	8	##ADDR##	datainst	0	#HEAD#	#TAIL#	24
+	9	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	10	##ADDR##	datadefn	0	#HEAD#	#TAIL#	60
+	11	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	12	##ADDR##	spimvref	0	#HEAD#	#TAIL#	16
+	13	##ADDR##	pintcoll	0	#HEAD#	#TAIL#	33
+	14	##ADDR##	pintinst	0	#HEAD#	#TAIL#	16
+	15	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	12
+	16	##ADDR##	CHPassgn	0	#HEAD#	#TAIL#	16
+	17	##ADDR##	sdinref_	0	#HEAD#	#TAIL#	16
+	18	##ADDR##	spinref_	0	#HEAD#	#TAIL#	16
+	19	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	20	##ADDR##	pintcoll	0	#HEAD#	#TAIL#	33
+	21	##ADDR##	dintcoll	0	#HEAD#	#TAIL#	34
+	22	##ADDR##	pintcoll	0	#HEAD#	#TAIL#	33
+	23	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	16
+	24	##ADDR##	procinst	0	#HEAD#	#TAIL#	24
+	25	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	26	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	27	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	28	##ADDR##	dintcoll	0	#HEAD#	#TAIL#	34
+
+In module created from: ##FILE## (unrolled)
+In namespace "", we have: {
+  0 parameter-collections
+  1 instantiation-collections
+  0 sub-namespaces
+  1 definitions
+  0 typedefs
+  Definitions:
+    assignme = process-definition (defined) assignme<
+      pint<> W
+      >(
+        int<::assignme::W> b
+      )
+      In definition "assignme", we have: {
+      Parameters:
+        W = pint<> W
+        c = pint<> c
+      Instances:
+        b = int<::assignme::W> b
+      unroll sequence: 
+        pint<> W
+        int<::assignme::W> b
+        pint<> c
+      chp:
+        concurrent: {
+          *[
+            b := c
+          ]
+        }
+      footprint collection: {
+        <8> {
+          pint^0 W value: ?
+          int<8>^0 b (instantiated) = ::assignme::b 
+          pint^0 c value: ?
+        }
+      }
+      }
+
+  Instances:
+    X = process assignme<8>^0 X (instantiated) = ::X (
+      int<8>^0 b (instantiated) = ::X.b 
+    )
+}
+
